--- a/noteZ.html
+++ b/noteZ.html
@@ -3,7 +3,7 @@
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="https://cdn.tiny.cloud/1/vzs4bty6jjc0qkm4hkuplzry0oprhb4ghglfutnm5n7f3zfk/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
    <script>
      tinymce.init({
        selector: "#editor",
@@ -38,7 +38,8 @@
    </script>
  </head>
  <body>
- <h1>TinyMCE Example</h1>
+ <h1>NoteA:</h1>
+ <h2>A new era of notes</h2>
    <form method="post">
      <textarea id="editor"></textarea>
    </form>
